--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="jp.ac.u_tokyo.t.utdroid_camera" >
 
-    <!-- カメラとSDカードネットワーク通信を使用するためのパーミッション宣言 -->
+    <!-- カメラとSDカードを使用するためのパーミッション宣言 -->
     <uses-permission android:name="android.permission.CAMERA"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
